--- a/doc/agile/sprint_backlog_91.org
+++ b/doc/agile/sprint_backlog_91.org
@@ -14,21 +14,21 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-10-25 Tue 14:55]
+#+CAPTION: Clock summary at [2016-10-25 Tue 15:05]
 | <75>                                                                        |        |      |      |       |
 | Headline                                                                    | Time   |      |      |     % |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| *Total time*                                                                | *8:16* |      |      | 100.0 |
+| *Total time*                                                                | *8:25* |      |      | 100.0 |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| Stories                                                                     | 8:16   |      |      | 100.0 |
-| Active                                                                      |        | 8:16 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |        |      | 1:14 |  14.9 |
+| Stories                                                                     | 8:25   |      |      | 100.0 |
+| Active                                                                      |        | 8:25 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |        |      | 1:14 |  14.7 |
 | COMPLETED Edit release notes for previous sprint                            |        |      | 0:22 |   4.4 |
-| COMPLETED Improve bintray support                                           |        |      | 2:26 |  29.4 |
+| COMPLETED Improve bintray support                                           |        |      | 2:26 |  28.9 |
 | COMPLETED Add logo with white background                                    |        |      | 0:14 |   2.8 |
-| COMPLETED Consider renaming =diagrams= to =input_models=                    |        |      | 0:38 |   7.7 |
-| STARTED Implement wale                                                      |        |      | 2:50 |  34.3 |
-| STARTED Changes to stitch to accommodate wale                               |        |      | 0:32 |   6.5 |
+| COMPLETED Consider renaming =diagrams= to =input_models=                    |        |      | 0:38 |   7.5 |
+| STARTED Implement wale                                                      |        |      | 2:59 |  35.4 |
+| STARTED Changes to stitch to accommodate wale                               |        |      | 0:32 |   6.3 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -122,6 +122,7 @@ We decided against this in the end as it's handy having all diagrams
 in one place.
 
 *** STARTED Implement wale                                            :story:
+    CLOCK: [2016-10-25 Tue 14:56]--[2016-10-25 Tue 15:05] =>  0:09
     CLOCK: [2016-10-25 Tue 14:25]--[2016-10-25 Tue 14:55] =>  0:30
     CLOCK: [2016-10-25 Tue 11:47]--[2016-10-25 Tue 12:24] =>  0:37
     CLOCK: [2016-10-25 Tue 10:39]--[2016-10-25 Tue 11:01] =>  0:22
