--- a/doc/agile/sprint_backlog_91.org
+++ b/doc/agile/sprint_backlog_91.org
@@ -14,21 +14,22 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-10-25 Tue 17:06]
+#+CAPTION: Clock summary at [2016-10-26 Wed 10:24]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *10:25* |       |      | 100.0 |
+| *Total time*                                                                | *11:25* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 10:25   |       |      | 100.0 |
-| Active                                                                      |         | 10:25 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 1:14 |  11.8 |
-| COMPLETED Edit release notes for previous sprint                            |         |       | 0:22 |   3.5 |
-| COMPLETED Improve bintray support                                           |         |       | 2:26 |  23.4 |
-| COMPLETED Add logo with white background                                    |         |       | 0:14 |   2.2 |
-| COMPLETED Consider renaming =diagrams= to =input_models=                    |         |       | 0:38 |   6.1 |
-| STARTED Implement wale                                                      |         |       | 4:59 |  47.8 |
-| STARTED Changes to stitch to accommodate wale                               |         |       | 0:32 |   5.1 |
+| Stories                                                                     | 11:25   |       |      | 100.0 |
+| Active                                                                      |         | 11:25 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 1:14 |  10.8 |
+| COMPLETED Edit release notes for previous sprint                            |         |       | 0:22 |   3.2 |
+| COMPLETED Improve bintray support                                           |         |       | 2:26 |  21.3 |
+| COMPLETED Add logo with white background                                    |         |       | 0:14 |   2.0 |
+| COMPLETED Consider renaming =diagrams= to =input_models=                    |         |       | 0:38 |   5.5 |
+| COMPLETED Add kvp support to annotations                                    |         |       | 0:37 |   5.4 |
+| STARTED Implement wale                                                      |         |       | 5:22 |  47.0 |
+| STARTED Changes to stitch to accommodate wale                               |         |       | 0:32 |   4.7 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -121,7 +122,17 @@ paths for this but the targets will still look verbose.
 We decided against this in the end as it's handy having all diagrams
 in one place.
 
+*** COMPLETED Add kvp support to annotations                          :story:
+    CLOSED: [2016-10-26 Wed 10:23]
+    CLOCK: [2016-10-26 Wed 09:45]--[2016-10-26 Wed 10:22] =>  0:37
+
+It would be nice if annotations supported kvps directly such that one
+could declare a field as "kvp" and then just read all kvps in one
+go. At present we only have wale as a use case but this may be useful
+for dogen in general.
+
 *** STARTED Implement wale                                            :story:
+    CLOCK: [2016-10-26 Wed 09:20]--[2016-10-26 Wed 09:43] =>  0:23
     CLOCK: [2016-10-25 Tue 15:06]--[2016-10-25 Tue 17:06] =>  2:00
     CLOCK: [2016-10-25 Tue 14:56]--[2016-10-25 Tue 15:05] =>  0:09
     CLOCK: [2016-10-25 Tue 14:25]--[2016-10-25 Tue 14:55] =>  0:30
