--- a/doc/agile/sprint_backlog_91.org
+++ b/doc/agile/sprint_backlog_91.org
@@ -14,22 +14,23 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-10-26 Wed 12:04]
+#+CAPTION: Clock summary at [2016-10-26 Wed 22:55]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *13:03* |       |      | 100.0 |
+| *Total time*                                                                | *13:56* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 13:03   |       |      | 100.0 |
-| Active                                                                      |         | 13:03 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 1:14 |   9.5 |
-| COMPLETED Edit release notes for previous sprint                            |         |       | 0:22 |   2.8 |
-| COMPLETED Improve bintray support                                           |         |       | 2:26 |  18.6 |
-| COMPLETED Add logo with white background                                    |         |       | 0:14 |   1.8 |
-| COMPLETED Consider renaming =diagrams= to =input_models=                    |         |       | 0:38 |   4.9 |
-| COMPLETED Add kvp support to annotations                                    |         |       | 0:37 |   4.7 |
-| COMPLETED Implement wale                                                    |         |       | 7:00 |  53.6 |
-| STARTED Changes to stitch to accommodate wale                               |         |       | 0:32 |   4.1 |
+| Stories                                                                     | 13:56   |       |      | 100.0 |
+| Active                                                                      |         | 13:56 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 1:14 |   8.9 |
+| COMPLETED Edit release notes for previous sprint                            |         |       | 0:22 |   2.6 |
+| COMPLETED Improve bintray support                                           |         |       | 2:26 |  17.5 |
+| COMPLETED Add logo with white background                                    |         |       | 0:14 |   1.7 |
+| COMPLETED Consider renaming =diagrams= to =input_models=                    |         |       | 0:38 |   4.5 |
+| COMPLETED Add kvp support to annotations                                    |         |       | 0:37 |   4.4 |
+| COMPLETED Implement wale                                                    |         |       | 7:00 |  50.2 |
+| STARTED Add artefact source properties support                              |         |       | 0:53 |   6.3 |
+| STARTED Changes to stitch to accommodate wale                               |         |       | 0:32 |   3.8 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -194,6 +195,34 @@ Example changes to stitch template:
 - add a check to make sure all keys required by the template have been
   supplied and all keys supplied by the user have been used.
 
+*** STARTED Add artefact source properties support                    :story:
+    CLOCK: [2016-10-26 Wed 22:45]--[2016-10-26 Wed 22:55] =>  0:10
+    CLOCK: [2016-10-26 Wed 22:01]--[2016-10-26 Wed 22:44] =>  0:43
+
+- add properties to artefact properties, with enumeration for source:
+  stock formatter (current), wale formatter, stitch formatter. Other
+  possible types: null formatter, copy formatter.
+- add new expander.
+- hook it in with formattables workflow.
+
+Examples:
+
+: quilt.cpp.serialization.class_header.formatting_style=stock
+: quilt.cpp.serialization.class_header.formatting_input=a/b/c.wale
+
+*** Implement helper headers using wale                               :story:
+
+Tasks:
+
+- add profile for formatter helpers.
+- add classes for all helpers.
+
+*** Implement formatter headers using wale                            :story:
+
+Tasks:
+
+- add profile for formatters and update diagram to use it.
+
 *** STARTED Changes to stitch to accommodate wale                     :story:
     CLOCK: [2016-10-25 Tue 11:14]--[2016-10-25 Tue 11:46] =>  0:32
 Tasks:
@@ -226,25 +255,12 @@ Tasks:
   integrated world, we want to process a single template at a
   time. Names: directory workflow and file workflow?
 
-*** STARTED Merge properties factory with stitching factory           :story:
+*** Merge properties factory with stitching factory                   :story:
 
 In stitch we still have a few classes that are light on
 responsibilities. One case is the stitching properties factory, traits
 etc. We should merge all of this into a single class, properties
 factory.
-
-*** Add artefact source properties support                            :story:
-
-- add properties to artefact properties, with enumeration for source:
-  stock formatter (current), wale formatter, stitch formatter. Other
-  possible types: null formatter, copy formatter.
-- add new expander.
-- hook it in with formattables workflow.
-
-Examples:
-
-: quilt.cpp.serialization.class_header.formatting_style=stock
-: quilt.cpp.serialization.class_header.formatting_input=a/b/c.wale
 
 *** Add new formatter types                                           :story:
 
